--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
-# Krok 1: Sestavení kontejneru podle Dockerfile
+# Krok 1: Sestavení kontejneru
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'europe-west1-docker.pkg.dev/$PROJECT_ID/playeranalysis/${REPO_NAME}:${COMMIT_SHA}', '.']
 
-# Krok 2: Nahrání hotového kontejneru do registru
+# Krok 2: Nahrání kontejneru do registru
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/playeranalysis/${REPO_NAME}:${COMMIT_SHA}']
 
-# Krok 3: Nasazení do Cloud Run se všemi našimi nastaveními
+# Krok 3: Nasazení do Cloud Run se všemi nastaveními
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
   args:
@@ -19,10 +19,8 @@ steps:
     - '--cpu=2'
     - '--memory=4Gi'
     - '--timeout=600s'
-    - '--min-instances=1' # Volitelné: Udržuje 1 instanci stále aktivní pro rychlou odezvu
     - '--update-secrets=/app/inside-data-story-af484f6c4b69.json=gemini-api-key:latest'
     - '--allow-unauthenticated'
 
-# Uložení odkazu na hotový obraz
 images:
 - 'europe-west1-docker.pkg.dev/$PROJECT_ID/playeranalysis/${REPO_NAME}:${COMMIT_SHA}'
