--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,13 +13,13 @@ steps:
   args:
     - 'run'
     - 'deploy'
-    - 'playeranalysis' # <-- Název vaší Cloud Run služby
+    - 'playeranalysis'
     - '--image=europe-west1-docker.pkg.dev/$PROJECT_ID/playeranalysis/${REPO_NAME}:${COMMIT_SHA}'
     - '--region=europe-west1'
     - '--cpu=2'
     - '--memory=4Gi'
     - '--timeout=600s'
-    - '--update-secrets=/app/inside-data-story-af484f6c4b69.json=gemini-api-key:latest'
+    - '--update-secrets=GCP_SA_JSON=gemini-api-key:latest'
     - '--allow-unauthenticated'
 
 images:
