--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
-# Build the container image
+# Krok 1: Sestavení Docker image
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'europe-west1-docker.pkg.dev/$PROJECT_ID/football/${REPO_NAME}:${COMMIT_SHA}', '.']
 
-# Push the container image to Artifact Registry
+# Krok 2: Nahrání image do Artifact Registry
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/football/${REPO_NAME}:${COMMIT_SHA}']
 
-# Deploy container image to Cloud Run
+# Krok 3: Nasazení nové verze na Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: bash
   args:
@@ -16,14 +16,16 @@ steps:
       gcloud run deploy football \
         --image=europe-west1-docker.pkg.dev/$PROJECT_ID/football/${REPO_NAME}:${COMMIT_SHA} \
         --region=europe-west1 \
-        --cpu=4 \
-        --memory=4Gi \
+        --cpu=1 \
+        --memory=2Gi \
         --timeout=600s \
-        --update-secrets=GCP_SA_JSON=gemini-api-key:latest,AUTH_CONFIG=streamlit-auth-config:latest \
-        --min-instances=1
+        --update-secrets=GCP_SA_JSON=gemini-api-key:latest \
+        --allow-unauthenticated # <<< ZMĚNA: Aplikace je opět veřejná
 
+# Seznam vytvořených imagů
 images:
 - 'europe-west1-docker.pkg.dev/$PROJECT_ID/football/${REPO_NAME}:${COMMIT_SHA}'
 
+# Nastavení logování
 options:
   logging: CLOUD_LOGGING_ONLY
