--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,13 @@
 steps:
+# Krok 1: Sestavení Docker image
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'europe-west1-docker.pkg.dev/$PROJECT_ID/football/${REPO_NAME}:${COMMIT_SHA}', '.']
+
+# Krok 2: Nahrání image do Artifact Registry
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/football/${REPO_NAME}:${COMMIT_SHA}']
+
+# Krok 3: Nasazení nové verze na Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: bash
   args:
@@ -11,13 +16,17 @@ steps:
       gcloud run deploy football \
         --image=europe-west1-docker.pkg.dev/$PROJECT_ID/football/${REPO_NAME}:${COMMIT_SHA} \
         --region=europe-west1 \
-        --cpu=8 \
-        --memory=8Gi \
+        --cpu=1 \
+        --memory=2Gi \
         --timeout=600s \
         --update-secrets=GCP_SA_JSON=gemini-api-key:latest \
         --min-instances=1 \
         --allow-unauthenticated
+
+# Seznam vytvořených imagů
 images:
 - 'europe-west1-docker.pkg.dev/$PROJECT_ID/football/${REPO_NAME}:${COMMIT_SHA}'
+
+# Nastavení logování
 options:
   logging: CLOUD_LOGGING_ONLY
