--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,9 +16,10 @@ steps:
       gcloud run deploy football \
         --image=europe-west1-docker.pkg.dev/$PROJECT_ID/football/${REPO_NAME}:${COMMIT_SHA} \
         --region=europe-west1 \
-        --cpu=1 \
-        --memory=2Gi \
+        --cpu=4 \
+        --memory=4Gi \
         --timeout=600s \
+        --execution-environment=gen2 \
         --update-secrets=GCP_SA_JSON=gemini-api-key:latest \
         --min-instances=1 \
         --allow-unauthenticated
